force-app/main/default/objects/Treatment_Today__c/fields/Microdermabrasion_area__c.field-meta.xml
<CustomField>
    <fullName>Microdermabrasion_area__c</fullName>
    <label>Microdermabrasion area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arm(s)</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Hand(s)</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Trunk</fullName>
            </value>
            <value>
                <fullName>Delicate areas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>