force-app/main/default/objects/Treatment_Today__c/fields/Microdermabrasion_notes__c.field-meta.xml
<CustomField>
    <fullName>Microdermabrasion_notes__c</fullName>
    <label>Microdermabrasion notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>