force-app/main/default/objects/Treatment_Today__c/fields/Microdermabrasion_pass__c.field-meta.xml
<CustomField>
    <fullName>Microdermabrasion_pass__c</fullName>
    <label>Microdermabrasion pass</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>