force-app/main/default/objects/Treatment_Today__c/fields/Microdermabrasion_zone__c.field-meta.xml
<CustomField>
    <fullName>Microdermabrasion_zone__c</fullName>
    <label>Microdermabrasion zone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>