force-app/main/default/objects/Treatment_Today__c/fields/Peel_cooling_method__c.field-meta.xml
<CustomField>
    <fullName>Peel_cooling_method__c</fullName>
    <label>Peel cooling method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vitamin C gel</fullName>
            </value>
            <value>
                <fullName>Liquid Nitrogen Sweep</fullName>
            </value>
            <value>
                <fullName>Fan</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>