force-app/main/default/objects/Treatment_Today__c/fields/Peel_type__c.field-meta.xml
<CustomField>
    <fullName>Peel_type__c</fullName>
    <label>Peel type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glycolic Peel</fullName>
            </value>
            <value>
                <fullName>Jessners Peel</fullName>
            </value>
            <value>
                <fullName>Lactic / Phenol Peel</fullName>
            </value>
            <value>
                <fullName>Salicylic Peel</fullName>
            </value>
            <value>
                <fullName>TCA Chemical Peel</fullName>
            </value>
            <value>
                <fullName>TCA Combo Peel</fullName>
            </value>
            <value>
                <fullName>Vitalize Peel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>