force-app/main/default/objects/Treatment_Today__c/fields/Sculptra_body_dilution__c.field-meta.xml
<CustomField>
    <fullName>Sculptra_body_dilution__c</fullName>
    <label>Sculptra body dilution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>14 ML bacteriostatic</fullName>
            </value>
            <value>
                <fullName>2 ML 2% Lido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>