force-app/main/default/objects/Treatment_Today__c/fields/Sculptra_body_injectables__c.field-meta.xml
<CustomField>
    <fullName>Sculptra_body_injectables__c</fullName>
    <label>Sculptra body injectables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sculptra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>