force-app/main/default/objects/Treatment_Today__c/fields/Self_tanner_or_spray_tanner_in_last_7_d__c.field-meta.xml
<CustomField>
    <fullName>Self_tanner_or_spray_tanner_in_last_7_d__c</fullName>
    <description>Fractional Laser self  tanner or spray tanner in last 7 days</description>
    <label>Fractional Laser Self  tanner or spray</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>