force-app/main/default/objects/Treatment_Today__c/fields/SkinPen_Microneedling_areas_treated__c.field-meta.xml
<CustomField>
    <fullName>SkinPen_Microneedling_areas_treated__c</fullName>
    <label>SkinPen Microneedling areas treated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forehead</fullName>
            </value>
            <value>
                <fullName>Crow&apos;s feet</fullName>
            </value>
            <value>
                <fullName>Upper eyelids</fullName>
            </value>
            <value>
                <fullName>Lower eyelids</fullName>
            </value>
            <value>
                <fullName>Cheeks</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Upper lip</fullName>
            </value>
            <value>
                <fullName>Chin</fullName>
            </value>
            <value>
                <fullName>Nose</fullName>
            </value>
            <value>
                <fullName>Brow</fullName>
            </value>
            <value>
                <fullName>Hands</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>