force-app/main/default/objects/Treatment_Today__c/fields/SkinPen_Microneedling_Pre_Care_reviewed__c.field-meta.xml
<CustomField>
    <fullName>SkinPen_Microneedling_Pre_Care_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SkinPen Microneedling Pre Care reviewed</label>
    <type>Checkbox</type>
</CustomField>