force-app/main/default/objects/Treatment_Today__c/fields/SkinPen_Microneedling_topical_anesthesia__c.field-meta.xml
<CustomField>
    <fullName>SkinPen_Microneedling_topical_anesthesia__c</fullName>
    <label>SkinPen Microneedling topical anesthesia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLT cream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>