force-app/main/default/objects/Treatment_Today__c/fields/Tattoo_Removal_Area__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_Area__c</fullName>
    <label>Tattoo Removal Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>