force-app/main/default/objects/Treatment_Today__c/fields/Tattoo_removal_date__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_removal_date__c</fullName>
    <label>Tattoo removal date</label>
    <type>Date</type>
</CustomField>