force-app/main/default/objects/Treatment_Today__c/fields/Tattoo_removal_frosting_present__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_removal_frosting_present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tattoo removal frosting present</label>
    <type>Checkbox</type>
</CustomField>