force-app/main/default/objects/Treatment_Today__c/fields/Tattoo_Removal_lux_lotion_applied__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_lux_lotion_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tattoo Removal lux lotion applied</label>
    <type>Checkbox</type>
</CustomField>