force-app/main/default/objects/Treatment_Today__c/fields/Tattoo_removal_occlusive_balm__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_removal_occlusive_balm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tattoo removal occlusive balm</label>
    <type>Checkbox</type>
</CustomField>