force-app/main/default/objects/Treatment_Today__c/fields/Tattoo_Removal_Pregnant_Breastfeeding__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_Pregnant_Breastfeeding__c</fullName>
    <description>Tattoo Removal Pregnant/Breastfeeding</description>
    <label>Tattoo Removal Pregnant/Breastfeeding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>