force-app/main/default/objects/Treatment_Today__c/fields/Tattoo_Removal_safety__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_safety__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tattoo Removal safety eyewear applied</description>
    <label>Tattoo Removal safety</label>
    <type>Checkbox</type>
</CustomField>