force-app/main/default/objects/Treatment_Today__c/fields/Tattoo_Removal_self_tanner_spray_tanner__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_self_tanner_spray_tanner__c</fullName>
    <description>Tattoo Removal self-tanner/spray tanner in last 7 days</description>
    <label>Tattoo Removal self-tanner/spray tanner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>