force-app/main/default/objects/Treatment_Today__c/fields/TruSculpt_body_area__c.field-meta.xml
<CustomField>
    <fullName>TruSculpt_body_area__c</fullName>
    <label>TruSculpt body area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Arm Pit Fat</fullName>
            </value>
            <value>
                <fullName>Arms</fullName>
            </value>
            <value>
                <fullName>Bra Fat</fullName>
            </value>
            <value>
                <fullName>Buttocks</fullName>
            </value>
            <value>
                <fullName>Chin</fullName>
            </value>
            <value>
                <fullName>Flanks</fullName>
            </value>
            <value>
                <fullName>Inner Thighs</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>Outer Thighs</fullName>
            </value>
            <value>
                <fullName>Posterior Thighs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>