force-app/main/default/objects/Treatment_Today__c/fields/Vanquish_Tx_time__c.field-meta.xml
<CustomField>
    <fullName>Vanquish_Tx_time__c</fullName>
    <label>Vanquish Tx time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Minutes</fullName>
            </value>
            <value>
                <fullName>40 Minutes</fullName>
            </value>
            <value>
                <fullName>45 Minutes</fullName>
            </value>
            <value>
                <fullName>160 Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>