force-app/main/default/objects/Treatment_Today__c/fields/Weight_Loss_additional_notes__c.field-meta.xml
<CustomField>
    <fullName>Weight_Loss_additional_notes__c</fullName>
    <label>Weight Loss additional notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>