force-app/main/default/objects/Treatment_Today__c/fields/Weight_Loss_area_injected__c.field-meta.xml
<CustomField>
    <fullName>Weight_Loss_area_injected__c</fullName>
    <label>Weight Loss area injected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Arm</fullName>
            </value>
            <value>
                <fullName>Right Arm</fullName>
            </value>
            <value>
                <fullName>Stomach</fullName>
            </value>
            <value>
                <fullName>Take Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>