force-app/main/default/objects/Treatment_Today__c/fields/Weight_Loss_b12_given__c.field-meta.xml
<CustomField>
    <fullName>Weight_Loss_b12_given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weight Loss b12 given</label>
    <type>Checkbox</type>
</CustomField>