force-app/main/default/objects/Treatment_Today__c/fields/Weight_Loss_dosage__c.field-meta.xml
<CustomField>
    <fullName>Weight_Loss_dosage__c</fullName>
    <label>Weight Loss dosage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.25 mg</fullName>
            </value>
            <value>
                <fullName>.5 mg</fullName>
            </value>
            <value>
                <fullName>.75 mg</fullName>
            </value>
            <value>
                <fullName>1.0 mg</fullName>
            </value>
            <value>
                <fullName>1.25 mg</fullName>
            </value>
            <value>
                <fullName>1.5 mg</fullName>
            </value>
            <value>
                <fullName>10 mg</fullName>
            </value>
            <value>
                <fullName>12.5 mg</fullName>
            </value>
            <value>
                <fullName>2.5 mg</fullName>
            </value>
            <value>
                <fullName>5 mg</fullName>
            </value>
            <value>
                <fullName>17.5 mg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>